feat: Implementing new design structure as defined in new CV version

--- a/messages.xlf
+++ b/messages.xlf
@@ -291,260 +291,260 @@
         <source>Emploi General Electric (GE Vernova) - 2023/2025</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">17</context>
+          <context context-type="linenumber">18</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="2226767284605756434" datatype="html">
-        <source>Durée : &lt;b&gt;2 ans&lt;/b&gt;</source>
+      <trans-unit id="8578526123766963117" datatype="html">
+        <source>2 ans</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">18</context>
+          <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4616253446085702539" datatype="html">
         <source>Domaine d&apos;expertise : Microservices, automatisation, client lourd, architecture logiciel, communication haute performance / disponibilité</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">19</context>
+          <context context-type="linenumber">20</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5898693261581302025" datatype="html">
         <source>Compétences : Devops, Benchmarking, &lt;b&gt;C#&lt;/b&gt;/ASP.NET/WPF, C++, TypeScript, &lt;b&gt;MQTT&lt;/b&gt;, &lt;b&gt;GRPC&lt;/b&gt;, ElastciSearch, Angular</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">20</context>
+          <context context-type="linenumber">21</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1309918714462728404" datatype="html">
         <source>Emploi ARS Data - 2022/2023</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">23</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="8782522814270959412" datatype="html">
-        <source>Durée : &lt;b&gt;1 an&lt;/b&gt;</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
           <context context-type="linenumber">24</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="613636786526486939" datatype="html">
+        <source>1 an</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">30</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
+          <context context-type="linenumber">31</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3889484437966242666" datatype="html">
         <source>Domaine d&apos;expertise : Développement web, création &lt;b&gt;API fermée&lt;/b&gt;, interconnexion d&apos;applications</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">25</context>
+          <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4860418173446904711" datatype="html">
         <source>Compétences : Sécurité, Devops, &lt;b&gt;ASP.NET&lt;/b&gt;, TypeScript, MySQL, Angular, Versioning AzureDevops, UI/UX</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">26</context>
+          <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3311510330524164939" datatype="html">
         <source>Emploi Association Jean Gailhac - 2021/2022</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">29</context>
+          <context context-type="linenumber">30</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8846954017773459502" datatype="html">
         <source>Domaine d&apos;expertise : Développement &quot;From scratch&quot;, création Application Web, &lt;b&gt;paiement en ligne&lt;/b&gt;, Gestion des données utilisateurs</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">31</context>
+          <context context-type="linenumber">32</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5110576633976137296" datatype="html">
         <source>Compétences : Autonomie, Organisation, &lt;b&gt;JQUERY/AJAX&lt;/b&gt;, Javascript, php, MySQL, Wordpress, Versioning GitHub, Déploiement de solution open source</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">32</context>
+          <context context-type="linenumber">33</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1682969304410972027" datatype="html">
         <source>Emploi entreprise Promété - 2021</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">35</context>
+          <context context-type="linenumber">36</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="86492337782644582" datatype="html">
-        <source>Durée : &lt;b&gt;2 mois&lt;/b&gt;</source>
+      <trans-unit id="5174349160143834098" datatype="html">
+        <source>2 mois</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">36</context>
+          <context context-type="linenumber">37</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5249504201303366400" datatype="html">
         <source>Domaine d&apos;expertise : Développement Web, &lt;b&gt;maintenance Application Web&lt;/b&gt;, Création de modules</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">37</context>
+          <context context-type="linenumber">38</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1016510597157421476" datatype="html">
         <source>Compétences : Travail d&apos;équipe, AHAH / AJAX, Javascript, php, &lt;b&gt;MySQL&lt;/b&gt;, Drupal, GitLab</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">38</context>
+          <context context-type="linenumber">39</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2229136347091563705" datatype="html">
         <source>Hackathon MMI-2020</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">41</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="8709203396466687415" datatype="html">
-        <source>Durée : &lt;b&gt;1 semaine&lt;/b&gt;</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
           <context context-type="linenumber">42</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="2082437226267105542" datatype="html">
+        <source>1 semaine</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">48</context>
+          <context context-type="linenumber">43</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
+          <context context-type="linenumber">49</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1813456874584701739" datatype="html">
         <source>Domaine d&apos;expertise : &lt;b&gt;Communication&lt;/b&gt; et Statistiques</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">43</context>
+          <context context-type="linenumber">44</context>
         </context-group>
       </trans-unit>
       <trans-unit id="797947568721194659" datatype="html">
         <source>Compétences : Travail d&apos;équipe, &lt;b&gt;UI/UX&lt;/b&gt;, design général, recueil des besoins</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">44</context>
+          <context context-type="linenumber">45</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6123678801302923166" datatype="html">
         <source>Marathon MMI-2020</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">47</context>
+          <context context-type="linenumber">48</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7381072528226720583" datatype="html">
         <source>Domaine d&apos;expertise : &lt;b&gt;Développement web&lt;/b&gt;, mise en place d&apos;une boutique e-commerce administrable</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">49</context>
+          <context context-type="linenumber">50</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2466970247820300351" datatype="html">
         <source>Compétences : &lt;b&gt;Déploiement CMS&lt;/b&gt;, rédaction cahier des charges, Travail d&apos;équipe, UI/UX</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">50</context>
+          <context context-type="linenumber">51</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5535686313705088926" datatype="html">
         <source>[En cours] Mastère Architecte logiciel - 2024/ Epitech</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">54</context>
+          <context context-type="linenumber">55</context>
         </context-group>
       </trans-unit>
       <trans-unit id="983350138731609887" datatype="html">
         <source>License APSIO (Analyste Programmeur de Systèmes Informatiques Ouverts) - 2022/ IUT Blagnac</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">58</context>
+          <context context-type="linenumber">59</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3632456865791969605" datatype="html">
         <source>Classement : 1/26, Moyenne générale : 16.56</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">59</context>
+          <context context-type="linenumber">60</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6686444398715377409" datatype="html">
         <source>DUT MMI (Métiers du Multimédia et de l&apos;Internet) - 2020/ IUT Béziers</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">62</context>
+          <context context-type="linenumber">63</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2678747303333272280" datatype="html">
         <source>Classement : 1/63, Moyenne générale : 17.30</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">63</context>
+          <context context-type="linenumber">64</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8889170212769825019" datatype="html">
         <source>BACCALAUREAT SCIENTIFIQUE - 2020/ Lycée Jules Fil Carcassonne</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">66</context>
+          <context context-type="linenumber">67</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7307006943515733701" datatype="html">
         <source>Mention très bien, option science de l&apos;ingénieur, spécialité physique-chimie</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">67</context>
+          <context context-type="linenumber">68</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5626048591566039918" datatype="html">
         <source>Prix de l&apos;excellence - 2019/ Lycée Léonard de Vinci Antibes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">70</context>
+          <context context-type="linenumber">71</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1907720914162603035" datatype="html">
         <source>Décerné par le Rotary Club International</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">71</context>
+          <context context-type="linenumber">72</context>
         </context-group>
       </trans-unit>
       <trans-unit id="797674431476297952" datatype="html">
         <source>Concours d&apos;éloquence - 2019/ Lycée Léonard de Vinci Antibes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">74</context>
+          <context context-type="linenumber">75</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1287386795690685830" datatype="html">
         <source>Concours en anglais, propre au lycée, Talks : &quot;The importance of choices&quot;</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">75</context>
+          <context context-type="linenumber">76</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6247574746019092709" datatype="html">
         <source>Musculation : depuis 3 ans c&apos;est un sport qui me passionne et qui me permet de repousser mes limites.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">81</context>
+          <context context-type="linenumber">82</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2462032066631967260" datatype="html">
         <source>Modélisation 3D : un mariage entre mathématique, créativité et informatique qui me plaît énormément.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">85</context>
+          <context context-type="linenumber">86</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5661437941683324593" datatype="html">
         <source>La mécanique automobile me passionne de part l’aspect technique et précis mais aussi par la satisfaction de connaître le fonctionnement d’un système.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/main-resume/main-resume.component.ts</context>
-          <context context-type="linenumber">89</context>
+          <context context-type="linenumber">90</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5851560788527570644" datatype="html">
