--- a/messages.xlf
+++ b/messages.xlf
@@ -765,8 +765,8 @@
           <context context-type="linenumber">15</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="3992761092806684941" datatype="html">
-        <source>Âge : 20 ans</source>
+      <trans-unit id="541172856058277701" datatype="html">
+        <source><x id="START_PARAGRAPH" ctype="x-p" equiv-text="&lt;p&gt;"/>Âge : <x id="INTERPOLATION" equiv-text="{{ age }}"/> ans<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;p&gt;"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/side-bar/about-me/about-me.component.html</context>
           <context context-type="linenumber">18</context>
